[package]
name = "kernel"
version = "0.1.0"
authors = ["Spxg <itsme@unsafe.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
buddy_system_allocator = "0.7.0"
spin = "0.7.0"
xmas-elf = "0.7.0"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.riscv]
version = "0.6.0"
features = ["inline-asm"]

[dependencies.virtio-drivers]
git = "https://github.com/rcore-os/virtio-drivers"

[dependencies.fefs]
path = "../fefs"

[profile.release]
lto = "fat"
